--- a/web2py/applications/PetMet/static/css/web2py.css
+++ b/web2py/applications/PetMet/static/css/web2py.css
@@ -31,7 +31,7 @@ div.w2p_flash {
     vertical-align:middle;
     cursor:pointer;
     color:#000;
-    background-color:#ffdc00;
+    background-color:89cff0;
     z-index:2000;
 }
 
