--- a/web2py/applications/PetMet/views/default/index.html
+++ b/web2py/applications/PetMet/views/default/index.html
@@ -5,7 +5,7 @@
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 <script>
   var get_users_url = "{{=URL('api', 'get_users')}}";
-  var add_image_url = "{{=URL('api', 'add_image', user_signature=True)}}";
+  var add_image_url = "{{=URL('api', 'add_post', user_signature=True)}}";
   var usr_img_url = "{{=URL('api', 'get_pet_posts')}}";
   var set_price_url = "{{=URL('api', 'set_price')}}";
  
@@ -20,17 +20,17 @@
     <!-- Your code goes here.  Remember to call $("#vue-div").show() once you get the data for the first time. -->
 
     <div class="container padded">
-      <div class="image_space threequarters">
+      <div class="image_space fourquarters">
         <!-- Left part of the page -->
         <div v-if="self_page">
           <!-- Code to upload files, with control buttons -->
           {{if auth.user is not None: }}
           <div id="uploader_div" style="display:none">
             Upload an image file of your pet: <input id="file_input" type="file"  accept="image/jpeg">
-            Animal type: <input id="type_input" type="text">
-            Pet Name: <input id="name_input" type= "text">
-            Please give a description of your pet and their needs: <input id="description_input" type="text">
-            Contact Info: <input id="contact_input" type = "text">
+            Animal type: <input id="type_input" type="text" v-model="animal_type">
+            Pet Name: <input id="name_input" type= "text" v-model="pet_name">
+            Please give a description of your pet and their needs: <input id="description_input" type="text" v-model="description">
+            Contact Info: <input id="contact_input" type = "text" v-model="contact_info"/><br/>
           </div>
 
           <button v-if="!is_uploading" v-on:click="open_uploader"><i class="fa fa-plus"></i></button>
@@ -47,7 +47,12 @@
 
           <ul class="container">
             <li v-for="image in images" class="card lifted padded quarter">
-              <img v-bind:src="image.image_url" height="200px" width="200px" class="padded"/>
+              <img v-bind:src="image.image_url" height=400"px" width="400px" class="padded"/>
+
+              <p style="padding-left: 21px;" style="display: inline-block"> ${image.animal_type}</p>
+              <p style="padding-left: 21px;" style="display: inline-block"> ${image.pet_name}</p>
+              <p style="padding-left: 21px;" style="display: inline-block"> ${image.description}</p>
+              <p style="padding-left: 21px;" style="display: inline-block"> ${image.contact_info}</p>
 
 
 
@@ -56,21 +61,7 @@
         </div>
       </div>
 
-      <div class="user_space quarter right">
-        <!-- Right part of the page -->
-        <table class="fill" id="user_selector">
-          <tbody>
-            <tr class="center" v-for="user in users">
-              <!-- This row is you; code for getting your own images, and for setting self_page -->
-              <td><a v-on:click="get_pet_posts(user.user_id)">${user.first} ${user.last}</a></td>
-            </tr>
-            <!-- Then, one row for each person. -->
-          </tbody>
-        </table>
-
-      </div>
-
-  </div>
+      
 
 </div>
 
